prototype multiple pages finished

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -20,10 +20,17 @@
       <img src="/img/logo.svg" alt="current">
 
       <div class="registration">
-        <button class="secondary">Anmelden</button>
-        <button class="primary light">Registrieren</button>
+        <button class="secondary" onclick="window.location.assign('/dashboard.html')">Anmelden</button>
+        <button class="primary light" onclick="window.location.assign('/signup.html')">Registrieren</button>
       </div>
+
+      <div class="hamburgerIcon">
+        <img src="/img/icon_hamburger_open.svg" alt="Open Menu">
+      </div>
+
     </header>
+
+    
 
     <main>
       <div class="filters">
