--- a/prototype/dashboard.html
+++ b/prototype/dashboard.html
@@ -3,7 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard | Current</title>
+  <title>Dashboard | current</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/img/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#222222">
+  <link rel="shortcut icon" href="/img/favicons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="current">
+  <meta name="application-name" content="current">
+  <meta name="msapplication-TileColor" content="#f2f2f2">
+  <meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#f2f2f2">
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Inter&display=swap" rel="stylesheet">
   
