--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <meta name="theme-color" content="#f2f2f2">
 
+    <link rel="stylesheet" href="/App.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;700&family=Inter&display=swap" rel="stylesheet"> -->
   </head>
